force pre tags to wrap in various browsers, fixes issues with pre tags in wwn issues with long strings.

--- a/winehq_styles.css
+++ b/winehq_styles.css
@@ -28,7 +28,12 @@ A.hidden            { text-decoration: none; color: #000000; }
 OL,UL,P             { font-size: 12px; }
 TD,TR,TH            { font-size: 12px; }
 INPUT               { font-size: 12px; }
-PRE                 { font-family: monospace; font-size: 12px; }
+PRE                 {
+                     font-family: monospace; font-size: 12px;
+                     white-space: pre-wrap;
+                     white-space: -moz-pre-wrap !important;
+                     word-wrap: break-word;
+                    }
 
 /* Hn Sizes */
 H1                  { font-size: 180%; }
